auto-test/tests/chapter_18/invalid_parse/extra_credit/goto_kw_struct_tag.c

struct goto { int a; };
int main(void) {
    return 0;
}